# Aktina

./: .gitignore  CMakeLists.txt  README.md  out
images/: sample1.ppm
src/: camera.h  common.h  framebuffer.h  main.cpp  material.h  ray.h  raytraceable.h  scene.h  thread_pool.h  thread_safe_queue.h  thread_worker.cpp  thread_worker.h  vec3.h
